Better organization of blobs

--- a/wlan/prima/WCNSS_qcom_cfg.ini
+++ b/wlan/prima/WCNSS_qcom_cfg.ini
@@ -400,8 +400,21 @@ gEnableMacAddrSpoof=1
 rps_mask=0f
 
 # wifi ping test
-gEnableDynSplitScan=0
 gEnableLLStats=1
+
+#Enable Power Save offload
+gEnablePowerSaveOffload=2
+
+#Disable RTT as recommended by QC
+gEnableRTTSupport=0
+
+#Force WiFi antenna 1T1R on MTK solution AP to be disabled
+gForce1x1Exception=0
+
+#Skip DFS Channel in case of P2P Search
+# 0 - disable (Scan DFS Channel in P2P Search)
+# 1 - enable (Skip DFS Channel)
+gSkipDfsChannelInP2pSearch=0
 
 END
 
